--- a/lesson-1/dateDiff/index.html
+++ b/lesson-1/dateDiff/index.html
@@ -8,8 +8,23 @@
   <script type="module" src="./js/main.js"></script>
 </head>
 <body>
-  <form id="datecalc">
+  <button class="button" data-section="datecalc">Калькулятор дат</button>
+  <button class="button" data-section="timer">Таймер</button>
+  <form id="datecalc" class="section">
     <h3>Калькулятор дат</h3>
+    <label>
+        <strong>Первая дата:</strong>
+        <input type="date" name="firstDate" />
+    </label>
+    <label>
+        <strong>Вторая дата:</strong>
+        <input type="date" name="secondDate" />
+    </label>
+    <button type="submit">Расчитать промежуток</button>
+    <p id="datecalc__result"></p>
+  </form> 
+  <form id="timer" class="section" style="display: none;">
+    <h3>Таймер</h3>
     <label>
         <strong>Первая дата:</strong>
         <input type="date" name="firstDate" />
